--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+html {
+  scrollbar-width: none;
+}
+
 #select-label {
   top: -10px;
+}
+
+.content {
+  max-height: 95vh;
+  overflow-y: scroll;
 }
