--- a/src/pages/auth/auth.module.css
+++ b/src/pages/auth/auth.module.css
@@ -5,3 +5,12 @@
   align-items: center;
   flex-direction: column;
 }
+
+.bg {
+  background: rgba(0, 0, 0, 0.8)
+    url(./../../assets/img/WhatsApp\ Image\ 2024-11-28\ at\ 20.22.17.jpeg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-blend-mode: darken;
+}
